--- a/frontend/src/FilteredVideoList.css
+++ b/frontend/src/FilteredVideoList.css
@@ -43,3 +43,63 @@
 .video-item:hover .video-media video {
   transform: scale(1.05);
 }
+
+
+
+
+.thumbnail-container {
+  display: flex;
+}
+
+.thumbnail-container img {
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
+  border-radius: 4px;
+}
+
+.content {
+  flex-grow: 1;
+  padding: 20px;
+  background-color: #121212; /* Fondo oscuro */
+  color: #fff; /* Texto blanco */
+}
+
+.search-container {
+  padding-top: 20px;
+  margin-left: 25px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+input {
+  flex-grow: 1;
+  padding: 10px;
+  border: 1px solid #333; /* Borde más oscuro */
+  border-radius: 4px;
+  background-color: #333; /* Fondo más oscuro */
+  color: #fff; /* Texto blanco */
+}
+
+button {
+  background-color: #ff0000; /* Rojo de YouTube */
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:disabled {
+  background-color: #777; /* Gris más oscuro para el estado deshabilitado */
+  cursor: not-allowed;
+}
+
+/* Estilos para el nuevo botón Upload */
+.upload-btn {
+  padding: 5px 10px; /* Ajusta el padding para que sea más pequeño */
+  font-size: 14px;    /* Ajusta el tamaño de la fuente */
+}
+
+
